--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1,15 +1,65 @@
-@book{liemrst,
-  title={An Introduction to Reservoir Simulation Using MATLAB/GNU Octave},
-  author={Lie, Knut-Andreas},
+@misc{lieMrstUrl,
+title=      " An Introduction to Reservoir Simulation Using MATLAB: User guide for the Matlab Reservoir Simulation Toolbox (MRST)",
+author=     "Lie, Knut-Andreas",
+url =       "https://folk.ntnu.no/andreas/mrst/mrst-cam.pdf",
+urldate =   "2018-10-25",
+year =      "2018",
+note = {Accessed 25.10.2018}
+}
+@misc{surveyAD,
+title=      "Automatic Differentiation in Machine Learning: a Survey",
+author=     "Baydin, ATILIM GÜNEŞ and Pearlmutter, Barak A. and Radul, Alexey Andreyevich and Siskind, Jeffrey Mark",
+url =       "http://jmlr.org/papers/volume18/17-468/17-468.pdf",
+urldate =   "2018-11-21",
+year =      "2018",
+note = {Accessed 21.11.2018}
+}
+
+@misc{juliaLab,
+key = {The Julia Lab},
+title = "Julia Language Research and Development at MIT",
+url = "https://julia.mit.edu",
+urldate = "2018-11-21",
+year = "2018",
+note = {Accessed 21.11.2018}
+}
+
+@misc{juliaBlogRelease2012,
+title = "Why We Created Julia",
+author = {Bezanson, Jeff and Karpinski, Stefan and Shah, Viral and Edelman, Alan},
+url = "https://julialang.org/blog/2012/02/why-we-created-julia",
+urldate = "2018-11-21",
+year = "2012",
+note = {Accessed 21.11.2018}
+}
+
+@misc{mrstHomepage,
+key = {MRST Homepage},
+title = "Matlab Reservoir Simulation Toolbox",
+url = {https://www.sintef.no/projectweb/mrst},
+urldate = "2018-11-21",
+year = "2018",
+}
+
+@inproceedings{knet2016mlsys,
+  author={Yuret, Deniz},
+  title={Knet: beginning deep learning with 100 lines of Julia},
+  year={2016},
+  booktitle={Machine Learning Systems Workshop at NIPS 2016},
+  url = {https://github.com/denizyuret/AutoGrad.jl}
+}
+
+@article{innes2018don,
+  title={Don't Unroll Adjoint: Differentiating SSA-Form Programs},
+  author={Innes, Michael},
+  journal={arXiv preprint arXiv:1810.07951},
+  url = {https://github.com/FluxML/Zygote.jl},
   year={2018}
 }
-@misc{lieMrstUrl,
-    key = {User Guide for the MATLAB Reservoir Simulation Toolbox (MRST)},
-	title = {An Introduction to Reservoir Simulation Using MATLAB/GNU Octave},
-	year = {2018},
-    url = {https://folk.ntnu.no/andreas/mrst/mrst-cam.pdf},
-    urldate = {2018-10-25},
-    note = {Accessed 25.10.2018}
+
+@misc{ForwardDiff,
+  key = {ForwardDiff Package},
+  url = {http://www.juliadiff.org/ForwardDiff.jl/stable/},
+  year={2018},
+  note = {Accessed 21.11.2018}
 }
-
-
