--- a/configurations/packages.sty
+++ b/configurations/packages.sty
@@ -104,9 +104,11 @@
 \usepackage{rotating}
 \usepackage[version=4]{mhchem}
 \usepackage{ifthen}             % for bruk av den nye kommandoen \note{}
-\usepackage{color}      
+%\usepackage{color}      
 \usepackage{soulutf8}               % for highlighting
 \usepackage{scrextend}
 \usepackage{relsize}
 \addtokomafont{labelinglabel}{\sffamily}
 \raggedbottom
+
+% ====== Quotations ==========
