--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
-\documentclass[a4paper,11pt,twoside]{book}
+\PassOptionsToPackage{dvipsnames}{xcolor}
+\documentclass[a4paper,11pt,twoside,table,svgnames]{book}
 \usepackage{configurations/commands}
 \usepackage{configurations/packages}
 
