--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -20,7 +20,7 @@ key = {The Julia Lab},
 title = "Julia Language Research and Development at MIT",
 url = "https://julia.mit.edu",
 urldate = "2018-11-21",
-year = "2018",
+year = {n.d.},
 note = {Accessed 21.11.2018}
 }
 
@@ -38,7 +38,7 @@ key = {MRST Homepage},
 title = "Matlab Reservoir Simulation Toolbox",
 url = {https://www.sintef.no/projectweb/mrst},
 urldate = "2018-11-21",
-year = "2018",
+year = {n.d.},
 }
 
 @inproceedings{knet2016mlsys,
@@ -60,6 +60,22 @@ year = "2018",
 @misc{ForwardDiff,
   key = {ForwardDiff Package},
   url = {http://www.juliadiff.org/ForwardDiff.jl/stable/},
-  year={2018},
+  year={n.d.},
   note = {Accessed 21.11.2018}
+}
+
+@misc{opm,
+  key = {Open Porous Media},
+  url = {https://opm-project.org},
+  urldate = {2018-11-22},
+  year = {n.d.},
+  note = {Accessed 22.11.2018}
+}
+
+@misc{flowSolverADExample,
+  key = {Single-phase Compressible AD Solver},
+  url = {https://www.sintef.no/contentassets/2551f5f85547478590ceca14bc13ad51/core.html#single-phase-compressible-ad-solver},
+  urldate = {2018-11-22},
+  year = {n.d.},
+  note = {Accessed 22.11.2018}
 }
