--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -79,3 +79,11 @@ year = {n.d.},
   year = {n.d.},
   note = {Accessed 22.11.2018}
 }
+
+@misc{MATLAB.jl,
+  key = {MATLAB.jl},
+  url = {https://github.com/JuliaInterop/MATLAB.jl},
+  urldate = {2018-11-22},
+  year = {n.d.},
+  note = {Accessed 22.11.2018}
+}
